kubes/django.yml
kind: Service
apiVersion: v1
metadata:
  name: site-django
  namespace: lmi
  labels:
    app: site
    tier: django
spec:
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: site
    tier: django
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-django
  namespace: lmi
spec:
  selector:
    matchLabels:
      app: site
      tier: django
  replicas: 3
  template:
    metadata:
      labels:
        app: site
        tier: django
    spec:
      volumes:
      - name: gluster
        glusterfs:
          endpoints: glusterfs-cluster
          path: kubes-pv
      containers:
      - name: django
        image: evilben/lmi-django:(hash)
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
        volumeMounts:
        - name: gluster
          mountPath: /src/static
          subPath: lmi-site/static
        - name: gluster
          mountPath: /src/media
          subPath: lmi-site/media
