kubes/nginx.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: site
  namespace: lmi
  labels:
    app: site
  annotations:
    ingress.kubernetes.io/referrer-policy: "strict-origin-when-cross-origin"
    ingress.kubernetes.io/custom-response-headers: "Expect-CT: enforce, max-age=0, report-uri=https://evilben.report-uri.com/r/d/ct/reportOnly||Feature-Policy: usermedia 'none';"
    ingress.kubernetes.io/content-security-policy: "default-src https:; script-src 'self' https://www.googletagmanager.com https://code.jquery.com 'unsafe-inline'; style-src https: 'unsafe-inline'; connect-src https: wss:; object-src 'none' ; frame-src 'self' ; frame-ancestors 'self' ; form-action 'self' ; upgrade-insecure-requests; block-all-mixed-content; base-uri 'self'; report-uri https://evilben.report-uri.com/r/d/csp/enforce;"
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-preload: "true"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-temporary-redirect: "false"
    ingress.kubernetes.io/browser-xss-filter: "true"
    ingress.kubernetes.io/content-type-nosniff: "true"
spec:
  tls:
  - hosts:
    - louisemisellinteriors.co.uk
    - www.louisemisellinteriors.co.uk
    secretName: site-nginx-tls
  rules:
  - host: test.louisemisellinteriors.co.uk
    http: &http_rules
      paths:
      - path: "/"
        backend:
          serviceName: site-nginx
          servicePort: 8000
  - host: louisemisellinteriors.co.uk
    http: *http_rules
  - host: www.louisemisellinteriors.co.uk
    http: *http_rules
---
kind: Service
apiVersion: v1
metadata:
  name: site-nginx
  namespace: lmi
  labels:
    app: site
    tier: nginx
spec:
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: site
    tier: nginx
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-nginx
  namespace: lmi
spec:
  selector:
    matchLabels:
      app: site
      tier: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: site
        tier: nginx
    spec:
      volumes:
      - name: gluster
        glusterfs:
          endpoints: glusterfs-cluster
          path: kubes-pv
      containers:
      - name: nginx
        image: evilben/lmi-nginx:(hash)
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
        volumeMounts:
        - name: gluster
          mountPath: /src/static
          subPath: lmi-site/static
        - name: gluster
          mountPath: /src/media
          subPath: lmi-site/media
